--- a/.gitignore
+++ b/.gitignore
@@ -101,7 +101,7 @@ gradle-app.setting
 # gradle/wrapper/gradle-wrapper.properties
 
 ### Maven ###
-target/
+/target/
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
