--- a/SwebChat/pom.xml
+++ b/SwebChat/pom.xml
@@ -10,7 +10,7 @@
 	
 	<properties>
 		<java-version>1.8</java-version>
-		<org.springframework-version>5.0.9.RELEASE</org.springframework-version>
+		<org.springframework-version>4.3.21.RELEASE</org.springframework-version>
 		<org.aspectj-version>1.6.10</org.aspectj-version>
 		<org.slf4j-version>1.6.6</org.slf4j-version>
 	</properties>	
@@ -255,19 +255,19 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core</artifactId>
-			<version>4.2.3.RELEASE</version>
+			 <version>4.2.10.RELEASE</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
-			<version>4.2.3.RELEASE</version>
+			 <version>4.2.10.RELEASE</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-config</artifactId>
-			<version>4.2.3.RELEASE</version>
+			 <version>4.2.10.RELEASE</version>
 		</dependency>
 		
 		<!-- JSON -->
@@ -318,6 +318,13 @@
 		    <artifactId>commons-io</artifactId>
 		    <version>2.6</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-dbcp2 -->
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-dbcp2</artifactId>
+		    <version>2.5.0</version>
+		</dependency>
+		
 	</dependencies>
     <build>
         <plugins>
