--- a/SwebChat/src/main/webapp/WEB-INF/web.xml
+++ b/SwebChat/src/main/webapp/WEB-INF/web.xml
@@ -11,8 +11,8 @@
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
-			classpath*:spring/root-context.xml
-			classpath*:spring/appServlet/spring-security.xml
+			classpath:spring/root-context.xml
+			classpath:spring/appServlet/spring-security.xml
 		</param-value>
 	</context-param>
 	
@@ -27,7 +27,7 @@
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>classpath*:spring/appServlet/servlet-context.xml</param-value>
+			<param-value>classpath:spring/appServlet/servlet-context.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
