--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,7 @@ local.properties
 .cproject
 
 # JDT-specific (Eclipse Java Development Tools)
-SwebChat/.classpath
+.classpath
 
 # Java annotation processor (APT)
 .factorypath
